--- a/www/api/.env.example
+++ b/www/api/.env.example
@@ -58,3 +58,11 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+S3_MINIO_FILES_KEY=GelyaProdaet
+S3_MINIO_FILES_SECRET=GelyaProdaet-pass
+S3_MINIO_FILES_REGION=ru-1
+S3_MINIO_FILES_BUCKET=files
+S3_MINIO_FILES_URL=http://localhost:9000
+S3_MINIO_FILES_ENDPOINT=http://localhost:9000
+S3_MINIO_FILES_USE_PATH_STYLE_ENDPOINT=true
