add telegram bot publication

--- a/www/api/.env.example
+++ b/www/api/.env.example
@@ -66,3 +66,6 @@ S3_MINIO_FILES_BUCKET=files
 S3_MINIO_FILES_URL=http://localhost:9000
 S3_MINIO_FILES_ENDPOINT=http://localhost:9000
 S3_MINIO_FILES_USE_PATH_STYLE_ENDPOINT=true
+
+TELEGRAM_BOT_API_KEY=
+TELEGRAM_PUBLIC_ID=
