--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.12",
+        "nutgram/nutgram": "^3.17",
         "sn1kers385/laravel-file-uploader": "^1.2",
         "spatie/laravel-data": "^3.1"
     },
