--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # DOCKER ENV
 COMPOSE_PROJECT_NAME=GelyaProdaet
 HOST_PORT_NGINX=80
+HOST_PORT_API=127.0.0.1:9000
 HOST_PORT_POSTGRES=127.0.0.1:5432
 HOST_PORT_REDIS=127.0.0.1:6379
 PATH_TO_API=./www/api
@@ -9,7 +10,7 @@ POSTGRES_DATABASE=GelyaProdaet
 POSTGRES_USER=GelyaProdaet
 POSTGRES_PASSWORD=pass
 
-MINIO_9000_CONTAINER_PORT=127.0.0.1:9000
-MINIO_9001_CONTAINER_PORT=127.0.0.1:9001
+MINIO_9000_CONTAINER_PORT=127.0.0.1:9001
+MINIO_9001_CONTAINER_PORT=127.0.0.1:9002
 MINIO_ROOT_USER=GelyaProdaet
 MINIO_ROOT_PASSWORD=GelyaProdaet-pass
