--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -7,6 +7,8 @@ services:
     build:
       context: ./config/api
     working_dir: /var/www
+    ports:
+      - ${HOST_PORT_API}:80
     volumes:
       - ${PATH_TO_API}:/var/www/
     environment:
