--- a/www/api/.env.example
+++ b/www/api/.env.example
@@ -39,10 +39,12 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_ACCESS_KEY_ID=GelyaProdaet
+AWS_SECRET_ACCESS_KEY=GelyaProdaet-pass
+AWS_DEFAULT_REGION=ru-1
+AWS_BUCKET=files
+AWS_URL=http://localhost:9000
+AWS_ENDPOINT=http://localhost:9001
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
@@ -58,14 +60,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-S3_MINIO_FILES_KEY=GelyaProdaet
-S3_MINIO_FILES_SECRET=GelyaProdaet-pass
-S3_MINIO_FILES_REGION=ru-1
-S3_MINIO_FILES_BUCKET=files
-S3_MINIO_FILES_URL=http://localhost:9000
-S3_MINIO_FILES_ENDPOINT=http://localhost:9000
-S3_MINIO_FILES_USE_PATH_STYLE_ENDPOINT=true
 
 TELEGRAM_BOT_API_KEY=
 TELEGRAM_PUBLIC_ID=
