--- a/config/supervisord/conf.d/horizon.conf
+++ b/config/supervisord/conf.d/horizon.conf
@@ -1,6 +1,6 @@
 [program:horizon]
 process_name=%(program_name)s_%(process_num)02d
-user=forge
+user=www-data
 command=php /var/www/artisan horizon
 autostart=true
 autorestart=true
