--- a/config/api/Dockerfile
+++ b/config/api/Dockerfile
@@ -62,6 +62,11 @@ RUN apk update && apk add libxml2-dev gmp-dev libzip-dev
 
 RUN docker-php-ext-install gmp soap pcntl zip bcmath sockets
 
+RUN apk add libpng-dev jpeg-dev libjpeg-turbo-dev freetype-dev
+RUN docker-php-ext-install gd && \
+  docker-php-ext-configure gd --with-freetype --with-jpeg && \
+  docker-php-ext-install gd
+
 RUN echo "UTC" > /etc/timezone
 
 # Expose port 9000 and start php-fpm server
