--- a/config/supervisord/Dockerfile
+++ b/config/supervisord/Dockerfile
@@ -60,6 +60,11 @@ RUN apk update && apk add supervisor libxml2-dev gmp-dev libzip-dev
 
 RUN docker-php-ext-install gmp soap pcntl zip bcmath sockets
 
+RUN apk add libpng-dev jpeg-dev libjpeg-turbo-dev freetype-dev
+RUN docker-php-ext-install gd && \
+  docker-php-ext-configure gd --with-freetype --with-jpeg && \
+  docker-php-ext-install gd
+
 RUN echo "UTC" > /etc/timezone
 
 COPY supervisord.conf /etc/supervisord.conf
