--- a/config/nginx/api.conf
+++ b/config/nginx/api.conf
@@ -1,15 +1,14 @@
 server {
     listen 80;
 
-    server_name
-        nginx api.gelyaprodaet.dev;
+    server_name api.gelyaprodaet.local;
 
     root /var/www/api/public;
 
     index index.php index.html;
 
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/api_access.log;
+    error_log /var/log/nginx/api_error.log;
 
     location / {
         try_files $uri /index.php?$args;
