--- a/config/supervisord/Dockerfile
+++ b/config/supervisord/Dockerfile
@@ -65,6 +65,8 @@ RUN docker-php-ext-install gd && \
   docker-php-ext-configure gd --with-freetype --with-jpeg --with-webp  && \
   docker-php-ext-install gd
 
+RUN apk add jpegoptim optipng pngquant gifsicle libwebp libwebp-tools
+
 RUN echo "UTC" > /etc/timezone
 
 COPY supervisord.conf /etc/supervisord.conf
