--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.0",
         "laravel/horizon": "^5.15",
         "laravel/sanctum": "^3.2",
+        "laravel/telescope": "^4.14",
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.12",
         "nutgram/nutgram": "^3.17",
