--- a/www/api/.env.example
+++ b/www/api/.env.example
@@ -63,4 +63,5 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TELEGRAM_BOT_API_KEY=
 TELEGRAM_PUBLIC_ID=
+TELEGRAM_SYSTEM_GROUP_ID=
 TELEGRAM_WEBHOOK_TOKEN=
