--- a/www/api/composer.json
+++ b/www/api/composer.json
@@ -15,7 +15,8 @@
         "league/flysystem-aws-s3-v3": "^3.12",
         "nutgram/nutgram": "^3.17",
         "sn1kers385/laravel-file-uploader": "^1.4",
-        "spatie/laravel-data": "^3.1"
+        "spatie/laravel-data": "^3.1",
+        "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
