--- a/www/admin/package.json
+++ b/www/admin/package.json
@@ -14,10 +14,15 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.2",
+    "@types/luxon": "^3.3.0",
     "axios": "^1.2.1",
+    "chart.js": "^4.3.0",
+    "chartjs-adapter-luxon": "^1.3.1",
+    "luxon": "^3.3.0",
     "pinia": "^2.0.11",
     "quasar": "^2.11.10",
     "vue": "^3.0.0",
+    "vue-chartjs": "^5.2.0",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.0.0"
   },
