--- a/config/nginx/api.conf
+++ b/config/nginx/api.conf
@@ -1,3 +1,8 @@
+# Upstream для Go API
+upstream go_api {
+    server go-api:8080;
+}
+
 server {
     listen 80;
 
@@ -6,10 +11,51 @@ server {
     root /var/www/api/public;
 
     index index.php index.html;
+    client_max_body_size 100M;
 
     access_log /var/log/nginx/api_access.log;
     error_log /var/log/nginx/api_error.log;
 
+    # Go API маршрутизация (внешние запросы для сайта)
+    location /site/ {
+        proxy_pass http://go_api/api/v1/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Таймауты
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
+        
+        # CORS заголовки
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
+        
+        # Обработка preflight запросов
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE';
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
+            add_header 'Access-Control-Max-Age' 1728000;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+    }
+
+    # Health check для Go API
+    location /site/health {
+        proxy_pass http://go_api/health;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Laravel API (все остальные запросы - админка, внутренняя логика)
     location / {
         try_files $uri /index.php?$args;
     }
@@ -22,5 +68,13 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    # Обработка ошибок
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
