--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -29,6 +29,7 @@ services:
       TZ: UTC
     depends_on:
       - api
+      - site-api
 
   admin:
     image: node:16
@@ -58,25 +59,12 @@ services:
 
   redis:
     container_name: "${COMPOSE_PROJECT_NAME}_redisdb"
-    image: redis:7.0.9
-    restart: always
+    image: redis:7-alpine
+    restart: unless-stopped
     ports:
       - "${HOST_PORT_REDIS}:6379"
     volumes:
       - ./.docker/redis-data:/data
-
-  minio:
-    container_name: "${COMPOSE_PROJECT_NAME}_minio"
-    image: minio/minio
-    ports:
-      - "${MINIO_9000_CONTAINER_PORT}:9000"
-      - "${MINIO_9001_CONTAINER_PORT}:9001"
-    volumes:
-      - minio_storage:/data
-    environment:
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
-      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
-    command: server --console-address ":9001" /data
 
   supervisord:
     container_name: "${COMPOSE_PROJECT_NAME}_supervisord"
@@ -88,5 +76,24 @@ services:
     depends_on:
       - api
 
-volumes:
-  minio_storage:
+  site-api:
+    build:
+      context: .
+      dockerfile: config/site-api/Dockerfile
+    container_name: gelya_go_api_local
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_USER: postgres
+      DB_PASSWORD: secret123
+      DB_NAME: gelya_prodaet
+      DB_SSLMODE: disable
+      SERVER_PORT: 8080
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./www/site-api:/app
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    command: ["go", "run", "main.go"]
