--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
 
   api:
-    container_name: "${COMPOSE_PROJECT_NAME}_api"
+    container_name: "api"
     build:
       context: ./config/api
     working_dir: /var/www
@@ -16,7 +16,7 @@ services:
       TZ: UTC
 
   nginx:
-    container_name: "${COMPOSE_PROJECT_NAME}_nginx"
+    container_name: "nginx"
     image: nginx:alpine
     ports:
       - ${HOST_PORT_NGINX}:80
@@ -32,11 +32,12 @@ services:
       - site-api
 
   admin:
+    container_name: "admin"
     image: node:16
     volumes:
       - ${PATH_TO_ADMIN}:/srv/www
     ports:
-      - ${HOST_PORT_ADMIN_WS}:9000 # для нормальной работы DEV-режима с обновлением через WS
+      - ${HOST_PORT_ADMIN}:9000 # для нормальной работы DEV-режима с обновлением через WS
     depends_on:
       - api
     working_dir: /srv/www
@@ -45,7 +46,7 @@ services:
       TZ: UTC
 
   postgres:
-    container_name: "${COMPOSE_PROJECT_NAME}_postgresdb"
+    container_name: "postgresdb"
     image: postgres:15.2
     restart: always
     ports:
@@ -58,7 +59,7 @@ services:
       - ./.docker/postgresql-data:/var/lib/postgresql/data
 
   redis:
-    container_name: "${COMPOSE_PROJECT_NAME}_redisdb"
+    container_name: "redisdb"
     image: redis:7-alpine
     restart: unless-stopped
     ports:
@@ -67,7 +68,7 @@ services:
       - ./.docker/redis-data:/data
 
   supervisord:
-    container_name: "${COMPOSE_PROJECT_NAME}_supervisord"
+    container_name: "supervisord"
     build:
       context: ./config/supervisord
     volumes:
@@ -76,24 +77,38 @@ services:
     depends_on:
       - api
 
+  site:
+    container_name: "site"
+    build:
+      context: ./config/site
+    volumes:
+      - ${PATH_TO_SITE}:/srv/www
+    ports:
+      - ${HOST_PORT_SITE}:9000 # для нормальной работы DEV-режима с обновлением через WS
+    depends_on:
+      - site-api
+    working_dir: /srv/www
+    command: bash -c "npm run dev"
+    environment:
+      TZ: UTC
+
   site-api:
+    container_name: "site-api"
     build:
       context: .
-      dockerfile: config/site-api/Dockerfile
-    container_name: gelya_go_api_local
+      dockerfile: ./config/site-api/Dockerfile
     environment:
+      SERVER_PORT: 8080
       DB_HOST: postgres
       DB_PORT: 5432
-      DB_USER: postgres
-      DB_PASSWORD: secret123
-      DB_NAME: gelya_prodaet
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_NAME: ${POSTGRES_DATABASE}
       DB_SSLMODE: disable
-      SERVER_PORT: 8080
+      AWS_URL: https://storage.yandexcloud.net
+      AWS_BUCKET: kidstyle72-dev
     ports:
-      - "8080:8080"
-    volumes:
-      - ./www/site-api:/app
+      - ${HOST_PORT_SITE_API}:8080
     depends_on:
       - postgres
     restart: unless-stopped
-    command: ["go", "run", "main.go"]
