--- a/config/nginx/api.conf
+++ b/config/nginx/api.conf
@@ -1,6 +1,6 @@
 # Upstream для Go API
-upstream go_api {
-    server go-api:8080;
+upstream site_api {
+    server site-api:8080;
 }
 
 server {
@@ -18,7 +18,7 @@ server {
 
     # Go API маршрутизация (внешние запросы для сайта)
     location /site/ {
-        proxy_pass http://go_api/api/v1/;
+        proxy_pass http://site_api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,15 +44,6 @@ server {
             add_header 'Content-Length' 0;
             return 204;
         }
-    }
-
-    # Health check для Go API
-    location /site/health {
-        proxy_pass http://go_api/health;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Laravel API (все остальные запросы - админка, внутренняя логика)
